--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <header>
+      <p class= "title" id="banner"><h1>PUERTO RICO AIRLINES</h1>
+        <button class= "clickable">HOME</button>
+        <button class= "clickable">FLIGHTS</button>
+        <button class= "clickable">SUPPORT</button>
+        <button class= "clickable">LOGIN</button>
+      </p>
+    </header>
   </body>
 </html>
