Added a tan background

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <header>
-      <p class= "title" id="banner"><h1>PUERTO RICO AIRLINES</h1>
+    <div id = "tan">
+      <header>
+        <h1>PUERTO RICO AIRLINES</h1>
         <button class= "clickable">HOME</button>
         <button class= "clickable">FLIGHTS</button>
         <button class= "clickable">SUPPORT</button>
         <button class= "clickable">LOGIN</button>
-      </p>
-    </header>
+        </header>
+      </div>
+    </banner>
   </body>
 </html>
