Added sections and card class to the center portion of the website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Airlines!!</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
+  <body class="corkboard">
     <div id = "tan">
       <header>
         <h1>PUERTO RICO AIRLINES</h1>
@@ -14,7 +14,13 @@
         <button class= "clickable">SUPPORT</button>
         <button class= "clickable">LOGIN</button>
         </header>
-      </div>
-    </banner>
+    </div>
+    <div class="container">
+      <div class="card" id="white">Flights</div>
+      <div class="card" id="white">Group Trips</div>
+      <div class="card" id="white">Discount Flights</div>
+    </div>
+   
+
   </body>
 </html>
