Added a footer in html, added the paragraph text to the first three cards. added the id large to the CSS file

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         </header>
     </div>
     <div class="container">
-      <div class="card" id="white">Flights</div>
-      <div class="card" id="white">Group Trips</div>
-      <div class="card" id="white">Discount Flights</div>
+      <div class="card" id="small">Flights<p>Come checkout our sweet flights!</p></div>
+      <div class="card" id="small">Group Trips<p>We offer great </p></div>
+      <div class="card" id="small">Discount Flights<p>Discount flights available for individuals!</p></div>
     </div>
    
 
   </body>
+  <footer>
+    <div class="card" id="large">Flights<p>Come checkout our sweet flights!</p></div>
+  </footer>
 </html>
