Added buttons to the cards

--- a/index.html
+++ b/index.html
@@ -16,14 +16,30 @@
         </header>
     </div>
     <div class="container">
-      <div class="card" id="small">Flights<p>Come checkout our sweet flights!</p></div>
-      <div class="card" id="small">Group Trips<p>We offer great </p></div>
-      <div class="card" id="small">Discount Flights<p>Discount flights available for individuals!</p></div>
+      <div class="card" id="small">Flights
+        <p class="smalltxt">Come checkout our sweet flights!</p>
+        <button>Lets go</button>
+      </div>
+      <div class="card" id="small">Group Trips
+        <p class="smalltxt">We offer great </p>
+        <button>Group Rates</button>
+      </div>
+      <div class="card" id="small">Discount Flights
+        <p class="smalltxt">Discount flights available for individuals!</p>
+        <button>Jump in</button>
+      </div>
     </div>
    
 
   </body>
   <footer>
-    <div class="card" id="large">Flights<p>Come checkout our sweet flights!</p></div>
+    <div class="card" id="large">About us
+      <p class="smalltxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <button>Learn More</button>
+    </div>
   </footer>
 </html>
