Added a margin and changed font sizes

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <div id = "tan">
       <header>
         <h1>PUERTO RICO AIRLINES</h1>
-        <button class= "clickable">HOME</button>
-        <button class= "clickable">FLIGHTS</button>
-        <button class= "clickable">SUPPORT</button>
-        <button class= "clickable">LOGIN</button>
-        </header>
+        <button class= "top-button">HOME</button>
+        <button class= "top-button">FLIGHTS</button>
+        <button class= "top-button">SUPPORT</button>
+        <button class= "top-button">LOGIN</button>
+      </header>
     </div>
     <div class="container">
       <div class="card" id="small">Flights
+        
         <p class="smalltxt">Come checkout our sweet flights!</p>
-        <button>Lets go</button>
+        <button class="middle button">Lets go</button>
       </div>
       <div class="card" id="small">Group Trips
-        <p class="smalltxt">We offer great </p>
-        <button>Group Rates</button>
+        <p class="smalltxt">We offer great deals for individuals!</p>
+        <button class="middle button">Group Rates</button>
       </div>
       <div class="card" id="small">Discount Flights
         <p class="smalltxt">Discount flights available for individuals!</p>
-        <button>Jump in</button>
+        <button class="middle button">Jump in</button>
       </div>
     </div>
    
@@ -39,7 +40,7 @@
         ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <button>Learn More</button>
+      <button class="bottom button">Learn More</button>
     </div>
   </footer>
 </html>
