--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <button class= "top-button">LOGIN</button>
       </header>
     </div>
-    <div class="container">
+    <section class="container">
       <div class="card" id="small">Flights
-        
+
         <p class="smalltxt">Come checkout our sweet flights!</p>
         <button class="middle button">Lets go</button>
       </div>
@@ -29,12 +29,12 @@
         <p class="smalltxt">Discount flights available for individuals!</p>
         <button class="middle button">Jump in</button>
       </div>
-    </div>
+    </section>
    
 
   </body>
   <footer>
-    <div class="card" id="large">About us
+    <div class="card1" id="large">About us
       <p class="smalltxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
         ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
