The top buttons have been floated to the right. All cards have margins now.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   <body class="corkboard">
     <div id = "tan">
       <header>
-        <h1>PUERTO RICO AIRLINES</h1>
-        <button class= "top-button">HOME</button>
-        <button class= "top-button">FLIGHTS</button>
-        <button class= "top-button">SUPPORT</button>
-        <button class= "top-button">LOGIN</button>
+        <h1 class=top>PUERTO RICO AIRLINES</h1>
+        <button class= "top" id="right">HOME</button>
+        <button class= "top" id="right">FLIGHTS</button>
+        <button class= "top" id="right">SUPPORT</button>
+        <button class= "top" id="right">LOGIN</button>
       </header>
     </div>
     <section class="container">
       <div class="card" id="small">Flights
-
         <p class="smalltxt">Come checkout our sweet flights!</p>
         <button class="middle button">Lets go</button>
       </div>
